--- a/sass/style.scss
+++ b/sass/style.scss
@@ -241,130 +241,130 @@ section {
     position: relative;
 
     #div-container {
-        display: flex;
         position: absolute;
         top: 30vh;
-        gap: 3vw;
         // Colocar em todas as sections
         max-width: 1200px;
-    }
-
-    #div-profile {
         display: grid;
-        gap: 25px;
-        // width: 17vw;
+        grid-template-columns: 200px 1fr;
+        grid-template-rows: 1fr 1fr;
+        width: 90vw;
+        gap: 2vh 7vw;
+    }
 
-        #div-background {
-            @include centerItem();
-            background: var(--color-background-blue);
+    #div-background {
+        @include centerItem();
+        background: var(--color-background-blue);
+        height: 35vh;
+        width: 260px;
+        border-radius: 30px;
+        
+        overflow: hidden;
+
+        img {
             height: 35vh;
-            width: 260px;
-            border-radius: 30px;
-           
-            overflow: hidden;
-
-            img {
-                height: 35vh;
-                -webkit-transform: scale(1.5);
-            }
-        }
-
-        #div-technologies {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            gap: 15px;
-            p {
-                @include centerItem();
-                color: var(--color-text);
-                text-align: center;
-                font-family: Inter;
-                font-size: 1rem;
-                font-style: normal;
-                font-weight: 900;
-                min-width: 40px;
-                min-height: 40px;
-                border-radius: 7px;
-            
-            }
-            p:nth-child(1) {
-                background: #FF7554;
-            }
-            p:nth-child(2) {
-                background: rgba(110, 191, 248, 0.60);
-            }
-            p:nth-child(3) {
-                background: #cb6699;
-            }
-            p:nth-child(4) {
-                background: #f2cd6e;
-            }
-            p:nth-child(5) {
-                background: linear-gradient(90deg, rgba(242,78,30,1) 0%, rgba(255,114,98,1) 20%, rgba(162,89,255,1) 43%, rgba(26,188,254,1) 63%, rgba(10,207,131,1) 84%);
-            }
-            p:nth-child(6) {
-                background: #744e3b;
-            }
-            p:nth-child(7) {
-                background: #556096;
-            }
-            p:nth-child(8) {
-                background: #086590;
-            }
-            
+            -webkit-transform: scale(1.5);
         }
     }
 
-    #div-text {
-        display: flex;
-        flex-direction: column;
-        position: relative;
-        gap: 20px;
+    #div-technologies {
+        grid-row: 2;
+        width: 260px;
+
+        display: grid;
+        place-items: center;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 15px;
         height: 20vh;
-        width: 70vw;
-        top: 20vh;
-
-        h1 {
-            // width: 40vw;
-            font-family: Inter;
-            font-size: 4rem;
-            font-style: normal;
-            font-weight: 600;
-            line-height: normal;
-
-            background: linear-gradient(97deg, rgba(0, 198, 198, 0.75) 40.02%, rgba(165, 68, 225, 0.912) 80.7%);
-            background-clip: text;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            
-            &::after {
-                content: 'Front-End';
-                font-family: Poppins;
-                background: var(--color-yellow-talk);
-                -webkit-background-clip: text;
-
-                font-size: 1.1rem;
-                font-weight: 600;
-                padding: 2px 10px;
-                border: solid var(--color-yellow-talk) 3px;
-                border-radius: 10px;
-
-                position: relative;
-                bottom: 10px;
-                left: 15px;
-
-                font-weight: 700;
-            }
-        }
-
         p {
-            width: 30vw;
+            @include centerItem();
             color: var(--color-text);
+            text-align: center;
             font-family: Inter;
-            font-size: 1.25rem;
-            font-weight: 300;
-        }
+            font-size: 1rem;
+            font-style: normal;
+            font-weight: 900;
+            border-radius: 7px;
 
+            width: 100%;
+            height: 100%;
+        }
+        p:nth-child(1) {
+            background: #FF7554;
+        }
+        p:nth-child(2) {
+            background: rgba(110, 191, 248, 0.60);
+        }
+        p:nth-child(3) {
+            background: #cb6699;
+        }
+        p:nth-child(4) {
+            background: #f2cd6e;
+        }
+        p:nth-child(5) {
+            background: linear-gradient(90deg, rgba(242,78,30,1) 0%, rgba(255,114,98,1) 20%, rgba(162,89,255,1) 43%, rgba(26,188,254,1) 63%, rgba(10,207,131,1) 84%);
+        }
+        p:nth-child(6) {
+            background: #744e3b;
+        }
+        p:nth-child(7) {
+            background: #556096;
+        }
+        p:nth-child(8) {
+            background: #086590;
+        }
+        
     }
+
+    #about-me-title {
+        grid-column: 2;
+        grid-row: 1;
+        align-self: end;
+        font-family: Inter;
+        font-size: 4rem;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+
+        background: linear-gradient(97deg, rgba(0, 198, 198, 0.75) 40.02%, rgba(165, 68, 225, 0.912) 80.7%);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        
+        &::after {
+            content: 'Front-End';
+            font-family: Poppins;
+            background: var(--color-yellow-talk);
+            -webkit-background-clip: text;
+
+            font-size: 1.1rem;
+            font-weight: 600;
+            padding: 2px 10px;
+            border: solid var(--color-yellow-talk) 3px;
+            border-radius: 10px;
+
+            position: relative;
+            bottom: 10px;
+            left: 15px;
+
+            font-weight: 700;
+        }
+    }
+
+    #about-me-title, #about-me-text {
+        position: relative;
+        bottom: 5vh;
+    }
+
+    p {
+        width: 30vw;
+        color: var(--color-text);
+        font-family: Inter;
+        font-size: 1.25rem;
+        font-weight: 300;
+    }
+
+    
 
     #div-nickname {
         position: absolute;
