--- a/sass/style.css
+++ b/sass/style.css
@@ -235,17 +235,16 @@ section {
   position: relative;
 }
 #about-me #div-container {
-  display: flex;
   position: absolute;
   top: 30vh;
-  gap: 3vw;
   max-width: 1200px;
-}
-#about-me #div-profile {
   display: grid;
-  gap: 25px;
+  grid-template-columns: 200px 1fr;
+  grid-template-rows: 1fr 1fr;
+  width: 90vw;
+  gap: 2vh 7vw;
 }
-#about-me #div-profile #div-background {
+#about-me #div-background {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -255,16 +254,20 @@ section {
   border-radius: 30px;
   overflow: hidden;
 }
-#about-me #div-profile #div-background img {
+#about-me #div-background img {
   height: 35vh;
   -webkit-transform: scale(1.5);
 }
-#about-me #div-profile #div-technologies {
+#about-me #div-technologies {
+  grid-row: 2;
+  width: 260px;
   display: grid;
+  place-items: center;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 15px;
+  height: 20vh;
 }
-#about-me #div-profile #div-technologies p {
+#about-me #div-technologies p {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -274,44 +277,38 @@ section {
   font-size: 1rem;
   font-style: normal;
   font-weight: 900;
-  min-width: 40px;
-  min-height: 40px;
   border-radius: 7px;
+  width: 100%;
+  height: 100%;
 }
-#about-me #div-profile #div-technologies p:nth-child(1) {
+#about-me #div-technologies p:nth-child(1) {
   background: #FF7554;
 }
-#about-me #div-profile #div-technologies p:nth-child(2) {
+#about-me #div-technologies p:nth-child(2) {
   background: rgba(110, 191, 248, 0.6);
 }
-#about-me #div-profile #div-technologies p:nth-child(3) {
+#about-me #div-technologies p:nth-child(3) {
   background: #cb6699;
 }
-#about-me #div-profile #div-technologies p:nth-child(4) {
+#about-me #div-technologies p:nth-child(4) {
   background: #f2cd6e;
 }
-#about-me #div-profile #div-technologies p:nth-child(5) {
+#about-me #div-technologies p:nth-child(5) {
   background: linear-gradient(90deg, rgb(242, 78, 30) 0%, rgb(255, 114, 98) 20%, rgb(162, 89, 255) 43%, rgb(26, 188, 254) 63%, rgb(10, 207, 131) 84%);
 }
-#about-me #div-profile #div-technologies p:nth-child(6) {
+#about-me #div-technologies p:nth-child(6) {
   background: #744e3b;
 }
-#about-me #div-profile #div-technologies p:nth-child(7) {
+#about-me #div-technologies p:nth-child(7) {
   background: #556096;
 }
-#about-me #div-profile #div-technologies p:nth-child(8) {
+#about-me #div-technologies p:nth-child(8) {
   background: #086590;
 }
-#about-me #div-text {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  gap: 20px;
-  height: 20vh;
-  width: 70vw;
-  top: 20vh;
-}
-#about-me #div-text h1 {
+#about-me #about-me-title {
+  grid-column: 2;
+  grid-row: 1;
+  align-self: end;
   font-family: Inter;
   font-size: 4rem;
   font-style: normal;
@@ -322,7 +319,7 @@ section {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-#about-me #div-text h1::after {
+#about-me #about-me-title::after {
   content: "Front-End";
   font-family: Poppins;
   background: var(--color-yellow-talk);
@@ -337,7 +334,11 @@ section {
   left: 15px;
   font-weight: 700;
 }
-#about-me #div-text p {
+#about-me #about-me-title, #about-me #about-me-text {
+  position: relative;
+  bottom: 5vh;
+}
+#about-me p {
   width: 30vw;
   color: var(--color-text);
   font-family: Inter;
