style: responsive finally

--- a/sass/style.css
+++ b/sass/style.css
@@ -663,6 +663,9 @@ footer #footer #div-container .div-links ul li {
   #presentation #div-container #div-texts #h1-name {
     font-size: 6rem;
   }
+  #presentation #div-container #div-texts #h1-name::after {
+    left: 10px;
+  }
   #presentation #div-container #div-texts p {
     display: none;
   }
@@ -715,6 +718,9 @@ footer #footer #div-container .div-links ul li {
   }
   #projects {
     max-width: 100vw;
+  }
+  #projects .formats {
+    display: none;
   }
   #projects #div-container {
     flex-direction: column;
@@ -786,5 +792,54 @@ footer #footer #div-container .div-links ul li {
   }
   footer #footer {
     display: none !important;
+  }
+}
+@media (max-width: 395px) {
+  #presentation #div-texts h2 {
+    font-size: 3rem;
+  }
+  #presentation #div-container {
+    justify-content: center;
+  }
+  #presentation #div-container #div-profile {
+    display: grid;
+    place-items: center;
+  }
+  #presentation #div-container #div-profile video {
+    height: 40vh;
+  }
+  #presentation #div-container #div-texts #h1-name {
+    font-size: 5rem;
+  }
+}
+@media (max-width: 376px) {
+  #about-me #div-bg {
+    top: 13.5vh;
+  }
+  #about-me #about-me-title {
+    font-size: 2.2rem;
+  }
+  #about-me #about-me-title::after {
+    bottom: 10px;
+  }
+  #about-me #about-me-text {
+    bottom: 10vh;
+  }
+  footer #contact h1 {
+    font-size: 3.8rem;
+  }
+  footer #contact #button h3 {
+    font-size: 3.5rem;
+  }
+}
+@media (max-width: 360px) {
+  #presentation #div-container #div-texts #h1-name::after {
+    font-size: 1rem;
+  }
+  #about-me #about-me-title {
+    font-size: 2rem;
+  }
+  footer #contact h1 {
+    font-size: 3.6rem;
   }
 }/*# sourceMappingURL=style.css.map */
