--- a/sass/style.scss
+++ b/sass/style.scss
@@ -801,6 +801,10 @@ footer {
             #div-texts{
                 #h1-name{
                     font-size: 6rem;
+
+                    &::after {
+                        left: 10px;
+                    }
                 }
 
                 p{
@@ -877,6 +881,9 @@ footer {
     #projects {
         max-width: 100vw;
 
+        .formats {
+            display: none;
+        }
         #div-container {
             flex-direction: column;
             width: 100%;
@@ -970,4 +977,65 @@ footer {
     }
 
 
+}
+
+// 390
+@media (max-width: 395px) {
+    #presentation #div-texts h2 {
+        font-size: 3rem;
+    }
+    #presentation #div-container {
+        justify-content: center;
+
+        #div-profile {
+            display: grid;
+            place-items: center;
+            // align-items: center;
+            // height: 100%;
+
+            video {
+                height: 40vh;
+            }
+        }
+        
+        #div-texts #h1-name {
+            font-size: 5rem;
+        }
+    } 
+   
+}
+
+// 375
+@media (max-width: 376px) {
+    #about-me #div-bg {
+        top: 13.5vh;
+    }
+    #about-me #about-me-title {
+        font-size: 2.2rem;
+    }
+    #about-me #about-me-title::after {
+        bottom: 10px;
+    }
+    #about-me #about-me-text {
+        bottom: 10vh;
+    }
+    footer #contact h1 {
+        font-size: 3.8rem;
+    }
+    footer #contact #button h3 {
+        font-size: 3.5rem;
+    }
+}
+
+// 360
+@media (max-width: 360px) {
+    #presentation #div-container #div-texts #h1-name::after {
+        font-size: 1rem;
+    }
+    #about-me #about-me-title {
+        font-size: 2rem;
+    }
+    footer #contact h1 {
+        font-size: 3.6rem;
+    }
 }
