--- a/sass/style.scss
+++ b/sass/style.scss
@@ -195,9 +195,9 @@ section {
         } 
         p {
             width: 30vw;
-            color: var(--color-text);
+            color: #d9d9d9;
             font-family: Inter;
-            font-size: 20px;
+            font-size: 1.2rem;
             font-weight: 400;
         }
     }
