--- a/sass/style.css
+++ b/sass/style.css
@@ -477,13 +477,14 @@ shader-art canvas {
 #projects #div-container #div-carousel #div-carousel-container .carousel-item {
   scroll-snap-align: center;
   scroll-snap-stop: always;
-  background: #c9c9c9;
+  opacity: 0.9;
   height: 60vh;
   width: 50vw;
   transition: all 0.5s ease-in-out;
   border-radius: 30px;
   display: flex;
   padding: 20px 30px;
+  justify-content: space-between;
 }
 #projects #div-container #div-carousel #div-carousel-container .carousel-item .item-container-text {
   display: flex;
@@ -509,62 +510,22 @@ shader-art canvas {
   font-size: 2rem;
   letter-spacing: 3px;
 }
-#projects #div-container #div-carousel #div-carousel-container .carousel-item .container-links {
+#projects #div-container #div-carousel #div-carousel-container .carousel-item .item-container-text .container-text p {
   display: none;
-}
-#projects #div-container #div-carousel #div-carousel-container .carousel-item .item-container-img {
-  display: none;
-}
-#projects #div-container #div-carousel #div-carousel-container .carousel-item.active {
-  scroll-snap-align: center;
-  scroll-snap-stop: always;
-  opacity: 1;
-  height: 60vh;
-  width: 70vw;
-  transition: all 0.5s ease-in-out;
-  border-radius: 30px;
-  display: flex;
-  justify-content: space-between;
-  padding: 30px;
-}
-#projects #div-container #div-carousel #div-carousel-container .carousel-item.active .item-container-text {
-  display: flex;
-  flex-direction: column;
-  width: 40%;
-  justify-content: space-between;
-}
-#projects #div-container #div-carousel #div-carousel-container .carousel-item.active .item-container-text .container-text {
-  display: flex;
-  flex-direction: column;
-  gap: 3vh;
-}
-#projects #div-container #div-carousel #div-carousel-container .carousel-item.active .item-container-text .container-text .container-title {
-  display: flex;
-  gap: 15px;
-  align-items: center;
-}
-#projects #div-container #div-carousel #div-carousel-container .carousel-item.active .item-container-text .container-text .container-title img {
-  height: 5vh;
-}
-#projects #div-container #div-carousel #div-carousel-container .carousel-item.active .item-container-text .container-text .container-title h1 {
-  color: #fff;
-  font-size: 2rem;
-  letter-spacing: 3px;
-}
-#projects #div-container #div-carousel #div-carousel-container .carousel-item.active .item-container-text .container-text p {
-  display: inherit;
   color: #fff;
   font-weight: 300;
   font-family: "Poppins";
 }
-#projects #div-container #div-carousel #div-carousel-container .carousel-item.active .item-container-text .container-links {
+#projects #div-container #div-carousel #div-carousel-container .carousel-item .container-links {
   display: flex;
   align-items: center;
   justify-content: center;
+  display: none;
   justify-content: space-between;
+  gap: 8px;
   padding: 0 2vw;
 }
-#projects #div-container #div-carousel #div-carousel-container .carousel-item.active .item-container-text .container-links .link-container {
+#projects #div-container #div-carousel #div-carousel-container .carousel-item .container-links .link-container {
   display: flex;
   align-items: center;
   gap: 8px;
@@ -572,11 +533,36 @@ shader-art canvas {
   padding: 5px 20px;
   border-radius: 7px;
 }
-#projects #div-container #div-carousel #div-carousel-container .carousel-item.active .item-container-text .container-links .link-container img {
+#projects #div-container #div-carousel #div-carousel-container .carousel-item .container-links .link-container img {
   height: 20px;
 }
-#projects #div-container #div-carousel #div-carousel-container .carousel-item.active .item-container-text .container-links .link-container p {
+#projects #div-container #div-carousel #div-carousel-container .carousel-item .container-links .link-container p {
   color: #fff;
+}
+#projects #div-container #div-carousel #div-carousel-container .carousel-item .item-container-img {
+  display: none;
+  place-items: center;
+}
+#projects #div-container #div-carousel #div-carousel-container .carousel-item .item-container-img img {
+  height: 5vh;
+}
+#projects #div-container #div-carousel #div-carousel-container .carousel-item.active {
+  opacity: 1;
+  height: 60vh;
+  width: 70vw;
+  overflow: hidden;
+}
+#projects #div-container #div-carousel #div-carousel-container .carousel-item.active .item-container-text {
+  width: 40%;
+}
+#projects #div-container #div-carousel #div-carousel-container .carousel-item.active .item-container-text .container-text .container-title {
+  display: flex;
+}
+#projects #div-container #div-carousel #div-carousel-container .carousel-item.active .item-container-text .container-text p {
+  display: inherit;
+}
+#projects #div-container #div-carousel #div-carousel-container .carousel-item.active .item-container-text .container-links {
+  display: flex;
 }
 #projects #div-container #div-carousel #div-carousel-container .carousel-item.active .item-container-img {
   display: grid;
@@ -585,15 +571,25 @@ shader-art canvas {
 #projects #div-container #div-carousel #div-carousel-container .carousel-item.active .item-container-img img {
   height: 45vh;
 }
-#projects #div-container #div-carousel #div-carousel-container .carousel-item-1 {
-  scroll-snap-type: x mandatory;
+#projects #div-container #div-carousel .carousel-item.active > div {
+  transition-delay: 4s;
+  animation: go 2s forwards;
+}
+@keyframes go {
+  from {
+    transform: translateY(-300px);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
+#projects #div-container .carousel-item-1 {
   background: #30193E;
 }
-#projects #div-container #div-carousel #div-carousel-container .carousel-item-2 {
-  scroll-snap-type: x mandatory;
-  opacity: 0.8;
+#projects #div-container .carousel-item-2 {
+  background: tomato;
 }
-#projects #div-container #div-carousel #div-carousel-container .carousel-item-3 {
+#projects #div-container .carousel-item-3 {
   background: #A755DA;
 }
 footer {
