--- a/sass/style.scss
+++ b/sass/style.scss
@@ -207,7 +207,7 @@ section {
         } 
         p {
             width: 30vw;
-            color: #d9d9d9;
+            color: var(--color-text);
             font-family: Inter;
             font-size: 1.2rem;
             font-weight: 400;
@@ -290,7 +290,7 @@ section {
         height: 20vh;
         p {
             @include centerItem();
-            color: var(--color-text);
+            color: white;
             text-align: center;
             font-family: Inter;
             font-size: 1rem;
@@ -681,8 +681,12 @@ shader-art canvas {
                 }
 
                 .carousel-item-2 {
-                    background: tomato;
+                    background: #FFAFAF;
                     
+                    
+                    .link-container {
+                        background: #cb6699;
+                    }
                 }
                 
 
